--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,10 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install Pandoc
-      run: sudo apt-get install -y pandoc
+      run: sudo apt-get install -y pandoc npm
+
+    - name: Install Mermaid Filter
+      run: npm install --global mermaid-filter
 
     - name: Convert Markdown to PDF
       run: pandoc latex-includes.yaml litepaper.md -F mermaid-filter --variable urlcolor=cyan -o litepaper.pdf
