--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install Pandoc
-      run: sudo apt-get install -y pandoc npm
+      run: sudo apt-get install -y pandoc npm texlive-latex-base texlive-fonts-recommended texlive-fonts-extra texlive-latex-extra
 
     - name: Install Mermaid Filter
       run: npm install --global mermaid-filter
